--- a/force-app/main/default/classes/EventDetailsController.cls
+++ b/force-app/main/default/classes/EventDetailsController.cls
@@ -1,5 +1,21 @@
 public with sharing class EventDetailsController {
     @AuraEnabled
+    public static List<Event__c> getUpcomingEvents(){
+        try {
+            List<Event__c> eventList = [SELECT Id, Name, Name__c, Event_Detail__c, Location__c, Location__r.Name,
+                                        Event_Organizer__c, Event_Organizer__r.Name 
+                                        FROM Event__c
+                                        WHERE Start_DateTime__c >= TODAY AND Live__c = true
+                                        WITH SECURITY_ENFORCED];
+
+            return eventList;
+        } catch (Exception e) {
+            TransactionLogHandler.doHandleException(e, 'EventDetailsController');
+            throw new AuraHandledException(e.getMessage());
+        }
+    }
+
+    @AuraEnabled(cacheable=true)
     public static List<EventSpeakers__c> getSpeakers(String eventId){
         try {
             List<EventSpeakers__c> speakerList = [SELECT Id, Name, Speaker__c, 
@@ -12,7 +28,7 @@ public with sharing class EventDetailsController {
         }
     }
 
-    @AuraEnabled
+    @AuraEnabled(cacheable=true)
     public static Event__c getLocationDetails(String eventId){
         try {
             Event__c eventWithLocation = [SELECT Id, Name__c, Location__c, 
@@ -26,7 +42,7 @@ public with sharing class EventDetailsController {
         }
     }
 
-    @AuraEnabled
+    @AuraEnabled(cacheable=true)
     public static List<Event_Attendee__c> getAttendees(String eventId){
         try {
             List<Event_Attendee__c> attendeeList = [SELECT Id, Name,
@@ -35,6 +51,41 @@ public with sharing class EventDetailsController {
             FROM Event_Attendee__c WHERE Event__c =: eventId WITH SECURITY_ENFORCED];
             return attendeeList;
         } catch (Exception e) {
+            TransactionLogHandler.doHandleException(e, 'EventDetailsController');
+            throw new AuraHandledException(e.getMessage());
+        }
+    }
+
+    @AuraEnabled
+    public static List<Event_Attendee__c> getFutureEventsOfAttendee(String attendeeId){
+        try {
+            List<Event_Attendee__c> eventsOfAttendeeList = [SELECT Id, Name, Event__c,
+                Event__r.Event_Organizer__c, Event__r.Event_Organizer__r.Name,
+                Event__r.Name__c, Event__r.Start_DateTime__c, Event__r.Location__c, Event__r.Location__r.Name 
+                FROM Event_Attendee__c
+                WHERE Attendee__c =: attendeeId
+                AND Event__r.Start_DateTime__c >= TODAY AND Event__r.Live__c = true
+                WITH SECURITY_ENFORCED];
+            return eventsOfAttendeeList;
+        } catch (Exception e) {
+            TransactionLogHandler.doHandleException(e, 'EventDetailsController');
+            throw new AuraHandledException(e.getMessage());
+        }
+    }
+
+    @AuraEnabled
+    public static List<Event_Attendee__c> getPastEventsOfAttendee(String attendeeId){
+        try {
+            List<Event_Attendee__c> eventsOfAttendeeList = [SELECT Id, Name, Event__c,
+                Event__r.Event_Organizer__c, Event__r.Event_Organizer__r.Name,
+                Event__r.Name__c, Event__r.Start_DateTime__c, Event__r.Location__c, Event__r.Location__r.Name 
+                FROM Event_Attendee__c
+                WHERE Attendee__c =: attendeeId
+                AND Event__r.Start_DateTime__c < TODAY
+                WITH SECURITY_ENFORCED];
+            return eventsOfAttendeeList;
+        } catch (Exception e) {
+            TransactionLogHandler.doHandleException(e, 'EventDetailsController');
             throw new AuraHandledException(e.getMessage());
         }
     }
