--- a/force-app/main/default/classes/EventAttendeeTriggerHandler.cls
+++ b/force-app/main/default/classes/EventAttendeeTriggerHandler.cls
@@ -60,4 +60,30 @@ public with sharing class EventAttendeeTriggerHandler {
             TransactionLogHandler.doHandleException(ex, 'EventAttendeeTriggerHandler');
         }
     }
+
+    // check to prevent duplicate record in Event_Attendee__c
+    public static void checkForDuplicates(List<Event_Attendee__c> newRecordList) {
+        Set<Id> attendeesIdsSet = new Set<Id>();
+        Set<Id> eventIdsSet = new Set<Id>();
+        // loop over the list of Trigger.New, add AttendeeId and EventId to the Set
+        for (Event_Attendee__c ea : newRecordList) {
+            attendeesIdsSet.add(ea.Attendee__c);
+            eventIdsSet.add(ea.Event__c);
+        }
+        // Select the existing record in Event_Attendee__c
+        List<Event_Attendee__c> existingRecords = [SELECT Id, Attendee__c, Event__c FROM Event_Attendee__c
+                                                WHERE Attendee__c IN : attendeesIdsSet AND Event__c IN : eventIdsSet];
+
+        // If the existing record is not null
+        if (existingRecords.size() > 0) {
+            // Loop over the list of Trigger.New
+            for (Event_Attendee__c ea : newRecordList) {
+                // If the Attendee and Event in Trigger.New is the same as the existing record
+                if (ea.Attendee__c == existingRecords[0].Attendee__c && ea.Event__c == existingRecords[0].Event__c) {
+                    // Add error message to the new record
+                    ea.addError('This Attendee has already registered for this Event');
+                }
+            }
+        }
+    }
 }
